fix(dashboard): align notification footer correctly using sticky positioning and remove layout conflicts

--- a/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/notification-panel/notification-area/notification-area.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/notification-panel/notification-area/notification-area.component.scss
@@ -85,6 +85,10 @@
   align-items: flex-start;
   position: relative;
 
+  > cd-icon {
+    margin-top: -$spacing-03;
+  }
+
   .notification-close {
     position: absolute;
     right: 0;
@@ -122,7 +126,6 @@
 
 .notification-area {
   display: block;
-  height: 100%;
   background-color: $layer-01;
 }
 
