--- a/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/notification-panel/notification-footer/notification-footer.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/notification-panel/notification-footer/notification-footer.component.scss
@@ -2,7 +2,8 @@
 @use '@carbon/styles/scss/theme';
 
 .notification-footer {
-  position: absolute;
+  position: sticky;
+  bottom: 0;
   width: 100%;
   z-index: 2;
   display: flex;
@@ -10,7 +11,6 @@
   background-color: theme.$layer-01;
   block-size: 2.5rem;
   border-block-start: 1px solid theme.$border-subtle-01;
-  inset-block-end: 0;
   min-block-size: 2.5rem;
   cursor: pointer;
 
